--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <body>
     <div class="history">
 
-        Founded by The Muyingo Family, Seeta High Schools were first established in 2000 and have since then expanded
+        Founded by The Muyingo Family, Seeta High Schools were first established in 2000 and celebrating 25 years and have since then expanded
         include four campuses_ Main, Mukono, Green, A'Level. We offer education based on the UNEB Curriculum while integrating
         faith since we are a Christian institution. All our have state-of-the-art facilities and skilled faculty members
         to ensure consistency and excellence in our students.
